--- a/css/styles.css
+++ b/css/styles.css
@@ -127,7 +127,7 @@ ul{
     width: 100%;
     height: 100%;
     background-color: #00000060;
-    transition: opacity 350ms, ubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 350ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .center{
@@ -296,10 +296,12 @@ ul{
     width: 100%;
     height: 4px;
     opacity: 0;
+    
 }
 
 .link:hover::after{
     opacity: 1;
+    transition: opacity 350ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link1{
